--- a/index.html
+++ b/index.html
@@ -10,9 +10,18 @@
 </head>
 
 <body>
-    <header>
+    <header class="container">
         <!-- navbar -->
-
+        <nav class="bg-light p-3 fs-2">
+            <div class="d-flex justify-content-between">
+                <a class="text-decoration-none" href="#">DailyNews</a>
+                <div class="">
+                    <a class="text-decoration-none" href="#">News</a>
+                    <a class="text-decoration-none ms-3" href="#">Blog</a>
+                </div>
+            </div>
+        </nav>
+        <hr>
     </header>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
