--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <!-- navbar -->
         <nav class="bg-light p-3 fs-2">
             <div class="d-flex justify-content-between">
-                <a class="text-decoration-none" href="#">DailyNews</a>
+                <a class="text-decoration-none text-danger fw-bold" href="#">DailyNews</a>
                 <div class="">
                     <a class="text-decoration-none" href="#">News</a>
                     <a class="text-decoration-none ms-3" href="#">Blog</a>
@@ -22,6 +22,12 @@
             </div>
         </nav>
         <hr>
+        <!-- news category -->
+        <div>
+            <ul id="category-ul" class="list-group list-group-horizontal d-flex justify-content-between">
+
+            </ul>
+        </div>
     </header>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
