--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 </head>
 
 <body>
-    <header class="container">
+    <header class="bg-light container">
         <!-- navbar -->
-        <nav class="bg-light p-3 fs-2">
+        <nav class="p-3 fs-2">
             <div class="d-flex justify-content-between">
                 <a class="text-decoration-none text-danger fw-bold" href="#">DailyNews</a>
                 <div class="">
@@ -31,11 +31,12 @@
         </div>
     </header>
 
-    <main class="container mt-5">
+    <main class="container bg-light mt-5">
         <section id="news-section" class="row row-cols-1 row-cols-md-2">
 
         </section>
     </main>
+
     <script src="https://kit.fontawesome.com/5b1c04d2f8.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
