--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
         </section>
     </main>
 
+    <!-- footer -->
+    <footer class="bg-light text-center align-middle mt-5 p-5">
+        <p>Copyright@2022 Daily News by HR</p>
+    </footer>
+
     <script src="https://kit.fontawesome.com/5b1c04d2f8.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
