No of news added

--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
     </header>
 
     <main class="container bg-light mt-5">
-        <section id="news-section" class="row row-cols-1 row-cols-md-2">
+        <div>
+            <h3 id="news-number"></h3>
+        </div>
+        <section id="news-section" class="row row-cols-1 row-cols-md-2 mt-5">
 
         </section>
     </main>
