--- a/index.html
+++ b/index.html
@@ -32,6 +32,14 @@
     </header>
 
     <main class="container bg-light mt-5">
+        <!-- spinner -->
+        <section id="spinner" class="d-none">
+            <div class="d-flex justify-content-center mt-5">
+                <div class="spinner-border" role="status">
+                    <span class="visually-hidden">Loading...</span>
+                </div>
+            </div>
+        </section>
         <div>
             <h3 id="news-number"></h3>
         </div>
