blog section added

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <a class="text-decoration-none text-danger fw-bold" href="#">DailyNews</a>
                 <div class="">
                     <a class="text-decoration-none" href="#">News</a>
-                    <a class="text-decoration-none ms-3" href="#">Blog</a>
+                    <a class="text-decoration-none ms-3" href="blog.html">Blog</a>
                 </div>
             </div>
         </nav>
