--- a/index.html
+++ b/index.html
@@ -43,6 +43,12 @@
         <div>
             <h3 id="news-number"></h3>
         </div>
+        <div>
+            <label for="news">Sort By:</label>
+            <select name="news" id="news">
+                <option>View Count</option>
+            </select>
+        </div>
         <section id="news-section" class="row row-cols-1 row-cols-md-2 mt-5">
 
         </section>
